--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Hero Section -->
   <section class="relative h-screen flex flex-col justify-center items-center text-center bg-gray-100">
     <h1 class="text-5xl md:text-7xl font-bold mb-4">L. Jitendra Krishna</h1>
-    <p class="text-xl md:text-2xl text-gray-600">Architecture Student | Designer</p>
+    <p class="text-xl md:text-2xl text-gray-600">Architect </p>
     <a href="#projects" class="mt-8 px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800">View My Work</a>
   </section>
 
