--- a/index.html
+++ b/index.html
@@ -12,136 +12,109 @@
   <!-- Hero Section -->
   <section class="relative h-screen flex flex-col justify-center items-center text-center bg-gray-100">
     <h1 class="text-5xl md:text-7xl font-bold mb-4">L. Jitendra Krishna</h1>
-    <p class="text-xl md:text-2xl text-gray-600">Architect </p>
+    <p class="text-xl md:text-2xl text-gray-600">Architect</p>
     <a href="#projects" class="mt-8 px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800">View My Work</a>
   </section>
 
-  <<!-- About Section -->
-<section id="about" class="max-w-5xl mx-auto py-20 px-6">
-  <div class="grid md:grid-cols-2 gap-12 items-center">
-    <div>
-      <h2 class="text-4xl font-semibold mb-6">About Me</h2>
-      <p class="text-gray-700 leading-relaxed mb-4">
-        I am an enthusiastic architecture graduate with academic experience in diverse projects spanning housing, interior design, urban planning, urban design, and landscape design e.t.c. My work reflects a keen interest in urban planning and transportation, supported by research-based and contextual design approaches.
-      </p>
-      <!-- Contact Button -->
-      <a href="#contact"
-        class="inline-block mt-4 px-5 py-2 bg-gray-900 text-white rounded hover:bg-gray-700">
-        Contact Me
-      </a>
+  <!-- About Section -->
+  <section id="about" class="max-w-5xl mx-auto py-20 px-6">
+    <div class="grid md:grid-cols-2 gap-12 items-center">
+      <div>
+        <h2 class="text-4xl font-semibold mb-6">About Me</h2>
+        <p class="text-gray-700 leading-relaxed mb-4">
+          I am an enthusiastic architecture graduate with academic experience in diverse projects spanning housing, interior design, urban planning, urban design, and landscape design e.t.c. My work reflects a keen interest in urban planning and transportation, supported by research-based and contextual design approaches.
+        </p>
+        <!-- Contact Button -->
+        <a href="#contact"
+          class="inline-block mt-4 px-5 py-2 bg-gray-900 text-white rounded hover:bg-gray-700">
+          Contact Me
+        </a>
+      </div>
+      <div>
+        <img src="./images/PROFILE.JPG.jpg" alt="Profile" class="rounded-xl shadow-lg" />
+      </div>
     </div>
-    <div>
-      <img src="./images/PROFILE.JPG.jpg" alt="Profile" class="rounded-xl shadow-lg" />
-    </div>
-  </div>
-</section>
-<!-- Projects Section -->
+  </section>
+
+  <!-- Projects Section -->
   <section id="projects" class="bg-gray-50 py-20 px-6">
     <div class="max-w-6xl mx-auto">
       <h2 class="text-4xl font-semibold text-center mb-12">Selected Projects</h2>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
         <!-- Project 1 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/Project - 1.jpg" alt="Project 1" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Architectural Thesis</h3>
-            <p class="text-gray-600 text-sm"> Connexus: A seamless multimodal transit hub connecting metro, rail, and bus networks. Integrating mobility with vibrant urban spaces.</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project1.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project1.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/Project - 1.jpg" alt="Project 1" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Architectural Thesis</h3>
+          <p class="text-gray-600 text-sm">Connexus: A seamless multimodal transit hub connecting metro, rail, and bus networks. Integrating mobility with vibrant urban spaces.</p>
+        </a>
 
         <!-- Project 2 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/Project - 2.png" alt="Project 2" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Housing Design</h3>
-            <p class="text-gray-600 text-sm">
-                            The housing vision is built on an interconnected network where EWS, LIG, MIG, and HIG coexist around shared amenities, services, and future growth.</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project2.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project2.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/Project - 2.png" alt="Project 2" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Housing Design</h3>
+          <p class="text-gray-600 text-sm">
+            The housing vision is built on an interconnected network where EWS, LIG, MIG, and HIG coexist around shared amenities, services, and future growth.
+          </p>
+        </a>
 
         <!-- Project 3 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/Project - 3.jpg" alt="Project 3" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Multi - Specialty Hospital</h3>
-            <p class="text-gray-600 text-sm">The Multi-Speciality Hospital integrates advanced medical technology with patient-centric design.</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project3.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project3.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/Project - 3.jpg" alt="Project 3" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Multi-Specialty Hospital</h3>
+          <p class="text-gray-600 text-sm">The Multi-Specialty Hospital integrates advanced medical technology with patient-centric design.</p>
+        </a>
 
         <!-- Project 4 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/project - 4.jpg" alt="Project 4" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Integrated  Apartment  Design</h3>
-            <p class="text-gray-600 text-sm">This project explores a vertical housing concept in Chennai, featuring 1BHK to 3BHK apartments with efficient layouts, ample ventilation, and balconies.</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project4.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project4.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/project - 4.jpg" alt="Project 4" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Integrated Apartment Design</h3>
+          <p class="text-gray-600 text-sm">This project explores a vertical housing concept in Chennai, featuring 1BHK to 3BHK apartments with efficient layouts, ample ventilation, and balconies.</p>
+        </a>
 
         <!-- Project 5 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/project - 5.png" alt="Project 5" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Landscape Design</h3>
-            <p class="text-gray-600 text-sm">This landscape project proposes a public park in the city of Kolkata, designed as an inclusive green space for recreation, relaxation, and community interaction.</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project5.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project5.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/project - 5.png" alt="Project 5" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Landscape Design</h3>
+          <p class="text-gray-600 text-sm">This landscape project proposes a public park in the city of Kolkata, designed as an inclusive green space for recreation, relaxation, and community interaction.</p>
+        </a>
 
         <!-- Project 6 -->
-        <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between">
-          <div>
-            <img src="./images/project - 6.jpg" alt="Project 6" class="rounded-md mb-4" />
-            <h3 class="text-xl font-semibold mb-2">Professional Experience</h3>
-            <p class="text-gray-600 text-sm">My Experience from the Internship and Freelance Projects</p>
-          </div>
-          <div class="mt-4 text-right">
-            <a href="project6.html" class="text-black font-bold text-xl hover:text-gray-700">→</a>
-          </div>
-        </div>
+        <a href="project6.html" class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
+          <img src="./images/project - 6.jpg" alt="Project 6" class="rounded-md mb-4" />
+          <h3 class="text-xl font-semibold mb-2">Professional Experience</h3>
+          <p class="text-gray-600 text-sm">My Experience from the Internship and Freelance Projects</p>
+        </a>
 
       </div>
     </div>
   </section>
 
- <!-- Contact Section -->
-<section id="contact" class="max-w-4xl mx-auto py-20 px-6 text-center">
-  <h2 class="text-4xl font-semibold mb-6">Get in Touch</h2>
-  <p class="text-gray-700 mb-8">
-    I’m always open to discussing new projects, collaborations, or opportunities. Feel free to reach out!
-  </p>
-  <div class="space-y-3">
-    <p>Email: 
-      <a href="mailto:linginenijitendrakrishna@gmail.com" class="text-blue-600 hover:underline">
-        linginenijitendrakrishna@gmail.com
-      </a>
+  <!-- Contact Section -->
+  <section id="contact" class="max-w-4xl mx-auto py-20 px-6 text-center">
+    <h2 class="text-4xl font-semibold mb-6">Get in Touch</h2>
+    <p class="text-gray-700 mb-8">
+      I’m always open to discussing new projects, collaborations, or opportunities. Feel free to reach out!
     </p>
-    <p>Phone: +91 7095242443</p>
-    <div class="flex justify-center space-x-6 mt-4">
-      <a href="https://www.linkedin.com/in/jitendrakrishnalingineni/" target="_blank" class="text-gray-700 hover:text-black">
-        LinkedIn
-      </a>
+    <div class="space-y-3">
+      <p>Email: 
+        <a href="mailto:linginenijitendrakrishna@gmail.com" class="text-blue-600 hover:underline">
+          linginenijitendrakrishna@gmail.com
+        </a>
+      </p>
+      <p>Phone: +91 7095242443</p>
+      <div class="flex justify-center space-x-6 mt-4">
+        <a href="https://www.linkedin.com/in/jitendrakrishnalingineni/" target="_blank" class="text-gray-700 hover:text-black">
+          LinkedIn
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-gray-400 text-center py-6">
     <p>&copy; 2025 L. Jitendra Krishna. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
